# UTEIS

./: .gitignore  compl2.txt  complexos-02_transcricao.txt  complexos-02_transcricao_20260710_080021.txt
cortador-video/: .gitignore  Makefile  pyproject.toml  requirements-dev.txt  requirements.txt
cortador-video/data/config/: video_cutter_config.json
cortador-video/scripts/: setup.sh
cortador-video/src/: main.py
cortador-video/src/config/: config_manager.py  settings.py
cortador-video/src/core/: video_cutter.py
cortador-video/src/exceptions/: video_exceptions.py
cortador-video/src/ui/: console_ui.py
cortador-video/src/utils/: file_utils.py  logger.py  time_utils.py
cortador-video/tests/unit/: test_video_cutter.py
cortar_video/: .gitignore  README.md  cortar_video.py  requirements.txt  video_cutter_config.json
transcricao-video/: .gitignore  pyproject.toml  requirements.txt
transcricao-video/src/: main.py
transcricao-video/src/config/: settings.py
transcricao-video/src/core/: transcriber.py
transcricao-video/src/ui/: colors.py  console_ui.py
transcricao-video/src/utils/: logger.py
transcricao-video/videos/output/: Joy_20260701_190547.txt
