[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "video-cutter"
version = "2.0.0"
description = "Ferramenta interativa para cortar vídeos"
readme = "docs/README.md"
requires-python = ">=3.12"  # ← MUDOU: 3.8 → 3.12
authors = [
    {name = "Seu Nome", email = "seu@email.com"}
]
license = {text = "MIT"}
dependencies = [
    "moviepy>=2.2.1",
    "click>=8.0.0",
    "colorama>=0.4.6"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
    "pylint>=2.0.0"
]

[project.urls]
Homepage = "https://github.com/seu-usuario/cortador-video"
Repository = "https://github.com/seu-usuario/cortador-video"
Issues = "https://github.com/seu-usuario/cortador-video/issues"

[tool.black]
line-length = 100
target-version = ['py312']  # ← MUDOU: py38 → py312

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"

[tool.mypy]
python_version = "3.12"  # ← MUDOU: 3.8 → 3.12
warn_return_any = true
warn_unused_configs = true